Created Group Creating system

--- a/chatapp/templates/includes/navbar.html
+++ b/chatapp/templates/includes/navbar.html
@@ -3,7 +3,7 @@
 <div class="navbar">
     <div class="logo"><img src="{% static 'images/favicon.ico' %}" alt="icon" width="60" height="60"></div>
     <div class="nav-links">
-        <a href="{% url 'create_group' %}">Home</a>
+        <a href="{% url 'create_room' %}">Home</a>
         <a href="{% url 'about' %}">About</a>
         <a href=#><b>{{ room_name }}</b></a>
     </div>
