--- a/chatapp/templates/chat/create_room.html
+++ b/chatapp/templates/chat/create_room.html
@@ -10,6 +10,11 @@
 
 {% block body %}
     <p>Create a Chat room, Type the name: </p>
-    <input id="room-name-input" type="text" size="100"><br>
-    <input id="room-name-submit" type="button" value="Enter">
+    <form action="">
+        {% csrf_token %}
+        <input id="room-name-input" type="text" size="50"><br>
+        <input id="room-password-input" type="password" size="50"><br>
+        <input id="room-create-submit" type="button" value="Enter">
+    </form>
+    
 {% endblock %}
