--- a/chatapp/templates/chat/create_room.html
+++ b/chatapp/templates/chat/create_room.html
@@ -3,8 +3,8 @@
 
 
 {% block head %}
-    <script type="text/javascript" src="{% static 'js/create_group.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'css/create_group.css' %}">
+    <script type="text/javascript" src="{% static 'js/create_room.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/create_room.css' %}">
 {% endblock  %}
 
 
