--- a/chatapp/templates/chat/layout.html
+++ b/chatapp/templates/chat/layout.html
@@ -1,7 +1,9 @@
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
     <title>Chat Rooms</title>
     {% block head %}
     
