--- a/chatapp/templates/chat/join_room.html
+++ b/chatapp/templates/chat/join_room.html
@@ -3,15 +3,14 @@
 
 
 {% block head %}
-    <script type="text/javascript" src="{% static 'js/create_room.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'css/create_room.css' %}">
+    <script type="text/javascript" src="{% static 'js/join_room.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/join_room.css' %}">
 {% endblock  %}
 
 
 {% block body %}
-    
     <form action="">
-        <p>Create a Chat room</p>
+        <p>Join a Chat room: </p>
         {% csrf_token %}
         <label>Name: <input id="room-name-input" type="text" size="50"><br></label>
         <label>Password: <input id="room-password-input" type="password" size="50"><br></label>
