--- a/chatapp/templates/chat/room.html
+++ b/chatapp/templates/chat/room.html
@@ -8,21 +8,27 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container-wrapper">
-        <div class="l-container">
-            <div id="user-container">
-    
-            </div>
-            <input id="create-group-submit" type="button" value="Create Group">
+<div class="container-wrapper">
+    <div class="l-container">
+        <div id="user-container">
+            <!-- Add user-related content here -->
         </div>
-        <div class="r-container">
-            <div id="message-container">
-                
-            </div>
-            <input id="chat-message-input" type="text" size="100">
-            <input id="chat-message-submit" type="button" value="Send">
-            {{ room_name|json_script:"room_name" }}
-            {{ username|json_script:"username" }}
+        <input id="create-group-submit" type="button" value="Create Group">
+    </div>
+    <div class="r-container">
+        <div id="message-container">
+            <!-- Add message-related content here -->
+        </div>
+        <input id="chat-message-input" type="text" size="100">
+        <input id="chat-message-submit" type="button" value="Send">
+        {{ room_name|json_script:"room_name" }}
+        {{ username|json_script:"username" }}
+    </div>
+    <div id="room-name-container">
+        <div class="room-name-content">
+            <h1 id="room-name">{{ room_name }}</h1>
         </div>
     </div>
+</div>
+
 {% endblock %}
