--- a/chatapp/templates/includes/navbar.html
+++ b/chatapp/templates/includes/navbar.html
@@ -1,10 +1,15 @@
 {% load static %}
 
 <div class="navbar">
-    <div class="logo"><img src="{% static 'images/favicon.ico' %}" alt="icon" width="60" height="60"></div>
+    <div class="logo"><a href="{% url 'index' %}"><img src="{% static 'images/favicon.ico' %}" alt="icon" width="60" height="60"></a></div>
     <div class="nav-links">
-        <a href="{% url 'create_room' %}">Home</a>
+        
         <a href="{% url 'about' %}">About</a>
-        <a href=#><b>{{ room_name }}</b></a>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'register' %}">Register</a>        
+        {% endif %}
     </div>
 </div>
